# cmakeStuffs

./: README.md
Pruebas/Prueba1/: CMakeLists.txt
Pruebas/Prueba1/src/: main.cpp
Pruebas/Prueba2_circle/libs/GLFW/: libglfw.so.3
Pruebas/Prueba2_circle/src/: main.cpp
helloworld/: readme.txt
vccodeexampleLibrary/: CMakeLists.txt  libraryexample.cpp
vcodeImportLibrary/exe/: CMakeLists.txt
vcodeImportLibrary/libraryMath/: CMakeLists.txt  functions.cpp  functions.h
vcodeexample/: CMakeLists.txt  main  readme.txt
websocket_boost _fransi/: CMakeLists.txt  main.cpp  test_main.cpp  test_main_server.cpp  test_trinity.cpp
websocket_boost _fransi/SooWSLib/: client.cpp  client.h  server.cpp  server.h
websocket_boost _fransi/Trinity/: interfaceMsgTrinity.h  trinity.cpp  trinity.h
